--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-beta3",
-    "cookie": "^0.4.1",
-    "js-cookie": "^2.2.1",
-    "next": "11.0.1",
+    "diacritic": "^0.0.2",
+    "next": "^11.0.1",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.35.2"
+    "react-draggable": "^4.4.3",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/react": "^17.0.14",
+    "autoprefixer": "^10.3.1",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7",
     "typescript": "^4.3.5"
   }
 }
